--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,7 +29,7 @@ derive-new = "0.5"
 specs-derive = { git = "https://github.com/slide-rs/specs" }
 uuid = { version = "0.7.1", features = ["v4", "serde"] }
 ron = "0.4"
-
+lazy_static = "1.2"
 hoppinworlddata = { git = "https://github.com/hoppinworld/data" }
 half_matrix = "0.2"
 
