--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,48 +1,25 @@
 [package]
-name = "hoppinworldruntime"
+name = "hoppinworld_runtime"
 version = "0.1.0"
 authors = ["Joël Lupien (Jojolepro) <jojolepromain@gmail.com>"]
 edition = "2018"
 
 [dependencies]
-
-
-amethyst = { git = "https://github.com/jojolepro/amethyst", branch = "hoppinworld" }
-#amethyst_gltf = { git = "https://github.com/jojolepro/amethyst", branch = "hoppinworld" }
-#amethyst_core = { git = "https://github.com/jojolepro/amethyst", branch = "hoppinworld" }
-
-
+amethyst = { path = "../amethyst" }
+amethyst-extra = { path = "../amethyst-extra" }
+hoppinworld_data = { path = "../data" }
 hyper = "0.12.11"
 hyper-tls = "0.3.1"
-
 tokio = "0.1.7"
 tokio-executor = "0.1.0"
-
-amethyst-extra = { git = "https://github.com/jojolepro/amethyst-extra" }
-
 serde = { version = "1", features = ["serde_derive"] }
 log = "0.4"
 winit = "0.17.0"
 partial_function = "0.4.0"
 derive-new = "0.5"
-#derive_builder = "0.6"
-specs-derive = { git = "https://github.com/slide-rs/specs" }
 uuid = { version = "0.7.1", features = ["v4", "serde"] }
 ron = "0.4"
 lazy_static = "1.2"
-hoppinworlddata = { git = "https://github.com/hoppinworld/data" }
 half_matrix = "0.2"
-
 serde_json = "1.0.32"
 
-#[patch.crates-io]
-#amethyst = { git = "https://github.com/jojolepro/amethyst", branch = "hoppinworld" }
-#amethyst_core = { git = "https://github.com/jojolepro/amethyst", branch = "hoppinworld" }
-#amethyst_assets = { git = "https://github.com/jojolepro/amethyst", branch = "hoppinworld" }
-#amethyst_renderer = { git = "https://github.com/jojolepro/amethyst", branch = "hoppinworld" }
-#
-#[patch.'https://github.com/amethyst/amethyst']
-#amethyst = { git = "https://github.com/jojolepro/amethyst", branch = "hoppinworld" }
-#amethyst_core = { git = "https://github.com/jojolepro/amethyst", branch = "hoppinworld" }
-#amethyst_assets = { git = "https://github.com/jojolepro/amethyst", branch = "hoppinworld" }
-#amethyst_renderer = { git = "https://github.com/jojolepro/amethyst", branch = "hoppinworld" }
